Fix Button overlapping joystick.

--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,6 @@ fieldset[disabled] .btn-xl.active {
 }
 
 header {
-    text-align: center;
     color: #707070;
     background-attachment: scroll;
     background-image: url(../img/header-bg.jpg);
